--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
 
           <div class="col-xs-12">
             <!-- Button -->
-            <button type="button" onclick="vai();" id="submit" name="submit" class="form contact-form-button light-form-button oswald light">Enviar EMAIL</button>
+            <button type="button" onclick="fale();" id="submit" name="submit" class="form contact-form-button light-form-button oswald light">Enviar EMAIL</button>
           </div>
         </form>
 
