--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
- 
- <script language="JavaScript">
-	function fale() {
-		
-		//document.sendmessage. = "SIM";
-		document.fale.submit();
-		
-		//display:none;
-		
-	}
-	
- </script>
+
 </head>
 
 <body>
@@ -556,7 +545,7 @@
 
           <div class="col-xs-12">
             <!-- Button -->
-            <button type="button" onclick="fale();" id="submit" name="submit" class="form contact-form-button light-form-button oswald light">Enviar EMAIL</button>
+            <button type="submit" id="submit" name="submit" class="form contact-form-button light-form-button oswald light">Enviar EMAIL</button>
           </div>
         </form>
 
