--- a/index.html
+++ b/index.html
@@ -530,10 +530,10 @@
               <input type="email" class="form-control" name="email_" id="email" placeholder="Seu Email" data-rule="email" data-msg="Por favor, informe um email válido" />
               <div class="validation"></div>
             </div>
-            <div class="form-group">
+            <!--div class="form-group">
               <input type="text" class="form-control" name="assunto_" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Por favor, preencha o mínimo de 8 letras no assunto" />
               <div class="validation"></div>
-            </div>
+            </div-->
           </div>
 
           <div class="col-md-6 col-sm-6 col-xs-12 right">
