--- a/index.html
+++ b/index.html
@@ -527,6 +527,9 @@
               <div class="validation"></div>
             </div>
             <div class="form-group">
+              <div class="validation"></div>
+            </div>
+            <div class="form-group">
               <input type="email" class="form-control" name="email_" id="email" placeholder="Seu Email" data-rule="email" data-msg="Por favor, informe um email válido" />
               <div class="validation"></div>
             </div>
