--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
     <div class="container text-center">
 
       <h3>Acesse o material gratuito</h3>
-
-      <form action="http://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post"  class="mc-trial row">
+	  
+      <form action="http://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" class="ebookForm">
         <input type="hidden" name="token_" value="123zxcfghopq">
         <div class="form-group col-md-3 col-md-offset-2 col-sm-4">
           <div class=" controls">
@@ -576,7 +576,7 @@
         <!-- End email input -->
         <div class="col-md-2 col-sm-4">
           <p>
-            <button name="submit" type="submit" class="btn btn-block btn-submit">
+            <button name="submit" type="submit" id="submit" class="btn btn-block btn-submit">
             Enviar <i class="fa fa-arrow-right"></i></button>
           </p>
         </div>
@@ -613,6 +613,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
+  <script src="contactform/ebookform.js"></script>
 
 </body>
 
