--- a/index.html
+++ b/index.html
@@ -580,8 +580,10 @@
             Enviar <i class="fa fa-arrow-right"></i></button>
           </p>
         </div>
+        </div>
+        <div>
       </form>
-	    <br>
+      <br>
       <!-- End newsletter-form -->
       <!--ul class="social-links"-->
       <ul class="social-network social-circle social-links">
