--- a/index.html
+++ b/index.html
@@ -581,9 +581,9 @@
           </p>
         </div>
         </div>
-        <div>
+       
       </form>
-      <br>
+       <div class="container text-center">
       <!-- End newsletter-form -->
       <!--ul class="social-links"-->
       <ul class="social-network social-circle social-links">
