--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         </div>
         <div id="sendmessage">Mensagem Enviada, Obrigado</div>
         <div id="errormessage"></div>
-        <form action="http://vps9431.publiccloud.com.br/atual/fale/enviar.php" name="fale" method="post" role="form" class="contactForm">
+        <form action="https://vps9431.publiccloud.com.br/atual/fale/enviar.php" name="fale" method="post" role="form" class="contactForm">
         <input type="hidden" name="token_" value="123zxcfgh">
           <div class="col-md-6 col-sm-6 col-xs-12 left">
             <div class="form-group">
@@ -554,13 +554,19 @@
     </div>
   </section>
   <!--/ Contact-->
+  
+  <div class="container">
+      <div class="row">
+        <div id="sendmessageebook"></div>
+        <div id="errormessageebook"></div>
+      </div>
+  </div>
+
   <!--Footer-->
   <footer id="footer" class="footer">
     <div class="container text-center">
-
-      <h3>Acesse o material gratuito</h3>
-	  
-      <form action="http://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" class="ebookForm">
+      <h3>Acesse o Ebook gratuito &lt; Desenhando Fórmulas de Química em LaTeX /&gt;. </h3>
+      <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" class="ebookForm">
         <input type="hidden" name="token_" value="123zxcfghopq">
         <div class="form-group col-md-3 col-md-offset-2 col-sm-4">
           <div class=" controls">
@@ -577,7 +583,7 @@
         <div class="col-md-2 col-sm-4">
           <p>
             <button name="submit" type="submit" id="submit" class="btn btn-block btn-submit">
-            Enviar <i class="fa fa-arrow-right"></i></button>
+            Solicitar Ebook <i class="fa fa-arrow-right"></i></button>
           </p>
         </div>
         </div>
@@ -590,9 +596,9 @@
       	<li><a href="https://github.com/Macelot/" class="icoGit"><i class="fab fa-github fa-fw"></i></a></li>
       	<li><a href="https://stackoverflow.com/users/3722369/user3722369" class="icoStack"><i class="fab fa-stack-overflow fa-fw"></i></i></a></li>
         <li><a href="https://medium.com/@marcelotelles_18526" class="icoMedium" class="icoMedium"><i class="fab fa-medium fa-fw"></i></a></li>
-        <li><a href="http://www.linkedin.com/pub/marcelo-telles/41/970/a52" class="icoLinkedin"><i class="fab fa-linkedin fa-fw"></i></a></li>
-        <li><a href="http://www.youtube.com/user/marcelojtelles?feature=watch" class="icoYouTube"><i class="fab fa-youtube fa-fw"></i></a></li>	
-        <li><a href="http://www.facebook.com/profile.php?id=100002941765270&ref=tn_tnmn" class="icoFacebook" ><i class="fab fa-facebook fa-fw"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/marcelo-telles-332b5661/" class="icoLinkedin"><i class="fab fa-linkedin fa-fw"></i></a></li>
+        <li><a href="https://www.youtube.com/user/marcelojtelles?feature=watch" class="icoYouTube"><i class="fab fa-youtube fa-fw"></i></a></li>	
+        <li><a href="https://www.facebook.com/profile.php?id=100002941765270&ref=tn_tnmn" class="icoFacebook" ><i class="fab fa-facebook fa-fw"></i></a></li>
        	<li><a href="https://br.pinterest.com/marcelotelles14/" class="icoPinterest"><i class="fab fa-pinterest fa-fw"></i></a></li>
         <li><a href="https://twitter.com/#!/marcelojtelles" class="icoTwitter"><i class="fab fa-twitter fa-fw"></i></a></li>
 		<br><br>
