--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
   <!--Footer-->
   <footer id="footer" class="footer">
     <div class="container text-center">
-      <h3>Acesse o Ebook gratuito &lt; Desenhando Fórmulas de Química em LaTeX /&gt;. </h3>
+      <h3>Solicite o Ebook gratuito  <font color="#FFFFFF"><i> { Desenhando Fórmulas de Química em LaTeX } </i></font>. </h3>
       <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" class="ebookForm">
         <input type="hidden" name="token_" value="123zxcfghopq">
         <div class="form-group col-md-3 col-md-offset-2 col-sm-4">
@@ -583,7 +583,7 @@
         <div class="col-md-2 col-sm-4">
           <p>
             <button name="submit" type="submit" id="submit" class="btn btn-block btn-submit">
-            Solicitar Ebook <i class="fa fa-arrow-right"></i></button>
+            Solicitar <i class="fa fa-arrow-right"></i></button>
           </p>
         </div>
         </div>
