--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <!--WEB  -->
         <div class="header-section text-center">
         	<h2></h2>
-          <p>Os Workshops são eventos presenciais com a máxima interação, onde os alunos podem se conhecer e receber informação de alta qualidade ao vivo.</p>
+          <p>Os Workshops são eventos presenciais com a máxima interação, onde os alunos podem se conhecer, interagir e receber informação de alta qualidade ao vivo. Neste tipo de evento os participantes recebem uma variedade de material pronto para uso e indicações de fontes onde encontrar mais recursos. Geralmente estes encontros tem duração de 4 horas com coffe break. Brindes sempre estão presentes em nossos workshops, aproveite :) .</p>
           <hr class="bottom-line">
         </div>
       </div>
