--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <meta name="description" content="Cursos de qualidade para melhorar seus resultados">
   <meta name="keywords" content="Latex, Overleaf, Chemfig, Excel, Google Planilhas, Libre Office Calc, Java, Ciencia de dados, Internet das Coisas">
 
+  <!-- animate -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel='stylesheet' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
+  
+
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/imagehover.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  
+  <link rel="stylesheet" href="css/styleanimate.css">
+  
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
   	
@@ -538,7 +546,7 @@
 
           <div class="col-xs-12">
             <!-- Button -->
-            <button type="submit" id="submit" name="submit" class="form contact-form-button light-form-button oswald light">Enviar EMAIL</button>
+            <button type="submit" id="submit" name="submit" class="form contact-form-button light-form-button oswald light">Enviar e-mail</button>
           </div>
         </form>
 
@@ -574,10 +582,11 @@
           </div>
         </div>
         <!-- End email input -->
+        
         <div class="col-md-2 col-sm-4">
           <p>
-            <button name="submit" type="submit" id="submit" class="btn btn-block btn-submit">
-            Solicitar <i class="fa fa-arrow-right"></i></button>
+            <button name="submit" type="submit" id="button1" class="btn btn-block mais">
+            Solicitar</button>
           </p>
         </div>
         </div>
@@ -615,13 +624,17 @@
 
 
 
-
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/custom.js"></script>
-  <script src="contactform/contactform.js"></script>
-  <script src="contactform/ebookform.js"></script>
+ 
+  
+  <script src='js/jquery.min.js'></script>
+  <script src='js/jquery-ui.min.js'></script>
+  <script src='js/jquery.easing.min.js'></script>
+  <script src='js/bootstrap.min.js'></script>
+  <script src='js/custom.js'></script>
+  <script src='contactform/contactform.js'></script>
+  <script src='contactform/ebookform.js'></script>
+  <script src='js/scriptanimate.js'></script>
+  
 
 </body>
 
