--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="Latex, Overleaf, Chemfig, Excel, Google Planilhas, Libre Office Calc, Java, Ciencia de dados, Internet das Coisas">
 
   <!-- animate -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel='stylesheet' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
+  <link rel="stylesheet" href="css/reset.min.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
   
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
