--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142100950-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142100950-1');
+</script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Atual.pro</title>
@@ -587,7 +597,7 @@
         </div>
         <!-- End email input -->
         <div class="col-md-2 col-sm-4">
-         <button type="submit" id="btnSend" class="button1">Solicitar</button>
+         <button type="submit" id="btnSend" class="button1 success">Solicitar</button>
             <!--button name="submit" type="submit" id="button1" class="btn btn-block mais">Solicitar
             </button-->
         </div>
