--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <div class="row">
         <div class="header-section text-center">
           <h2>Cursos Online</h2>
-          <p>Os cursos são voltados para professores, desenvolvedores e alunos. <br> Todos podemos colocar mais qualidade no dia-a-dia. Manter-se atualizado é pro!</p>
+          <p>Os cursos são voltados para professores, desenvolvedores e alunos. <br> Todos podemos colocar mais qualidade no dia a dia. Manter-se atualizado é pro!</p>
           <hr class="bottom-line">
         </div>
       </div>
@@ -346,7 +346,7 @@
       <div class="row">
       <div class="col-md-4 col-sm-6 padleft-right">
           <figure class="imghvr-fold-up">
-            <img src="./img/latex_texto.jpg" class="img-responsive">
+            <img src="./img/latex_texto.png" class="img-responsive">
             <figcaption>
               <h3>Curso Atual LaTeX para fórmulas de Química</h3>
               <p>Neste curso vamos explorar o editor LaTeX, fazer sua instalação e criar as principais fórmulas de química.</p>
