--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         </div>
         <div class="col-md-4 col-sm-6 padleft-right">
           <figure class="imghvr-fold-up">
-            <img src="./img/excel_texto.jpg" class="img-responsive">
+            <img src="./img/excel_texto.png" class="img-responsive">
             <figcaption>
               <h3>Curso Atual Excel para Empreendedores</h3>
               <p>Neste curso vamos utilizar fórmulas e atalhos para facilitar o uso do Excel. Também vamos montar gráficos e montar buscas de dados diversos.</p>
@@ -366,7 +366,7 @@
         </div>
         <div class="col-md-4 col-sm-6 padleft-right">
           <figure class="imghvr-fold-up">
-            <img src="./img/java_texto.jpg" class="img-responsive">
+            <img src="./img/java_texto.png" class="img-responsive">
             <figcaption>
               <h3>Curso Atual Java para Ciência de Dados</h3>
               <p>Neste curso vamos construir uma aplicação prática com dados reais. Vamos montar desenhos, mapas e gráficos em Java! Vamos explorar Threads, Orientação a Objetos e Sockets.</p>
