--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
           <figure class="imghvr-fold-up">
             <img src="./img/latex_texto.png" class="img-responsive">
             <figcaption>
-              <h3>Curso Atual LaTeX para fórmulas de Química</h3>
-              <p>Neste curso vamos explorar o editor LaTeX, fazer sua instalação e criar as principais fórmulas de química.</p>
+              <h3>Curso Atual Simplificando as fórmulas de Química</h3>
+              <p>Neste curso vamos explorar o editor LaTeX, fazer sua instalação e criar as principais fórmulas de química, de um jeito simples.</p>
             </figcaption>
             <a href="#"></a>
           </figure>
@@ -359,7 +359,7 @@
             <img src="./img/excel_texto.png" class="img-responsive">
             <figcaption>
               <h3>Curso Atual Excel para Empreendedores</h3>
-              <p>Neste curso vamos utilizar fórmulas e atalhos para facilitar o uso do Excel. Também vamos montar gráficos e montar buscas de dados diversos.</p>
+              <p>Neste curso vamos utilizar fórmulas e atalhos para facilitar o uso do Excel. Montaremos gráficos e tabelas dinâmicas.</p>
             </figcaption>
             <a href="#"></a>
           </figure>
@@ -368,8 +368,8 @@
           <figure class="imghvr-fold-up">
             <img src="./img/java_texto.png" class="img-responsive">
             <figcaption>
-              <h3>Curso Atual Java para Ciência de Dados</h3>
-              <p>Neste curso vamos construir uma aplicação prática com dados reais. Vamos montar desenhos, mapas e gráficos em Java! Vamos explorar Threads, Orientação a Objetos e Sockets.</p>
+              <h3>Curso Atual Java para Cientistas de Dados</h3>
+              <p>Neste curso vamos construir uma aplicação prática com dados reais. Vamos criar gráficos, mapas, Threads e Sockets em Java.</p>
             </figcaption>
             <a href="#"></a>
           </figure>
