--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
       </div>
 
       <h3>Solicite o Ebook gratuito <font color="#FFFFFF"><i>Desenhando Fórmulas de Química em LaTeX</i></font>. </h3>
-      </h2><span><p>Você receberá apenas um e-mail. Prometo não utilizar suas informações de contato para enviar qualquer tipo de SPAM.</p></span><p><span>Alguns e-mails podem ficar no lixo eletrônico.</p></span></h2>
+      </h2><span><p>Prometo não utilizar suas informações de contato para enviar qualquer tipo de SPAM.</p></span><p><span>Alguns serviços de e-mail podem direcionar o Ebook para o lixo eletrônico.</p></span></h2>
       <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" role="form" class="ebookForm">
         <input type="hidden" name="token_" value="123zxcfghopq">
         <div class="col-md-3 col-md-offset-2 col-sm-4">
