--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a href="#courses">Cursos</a></li>
           <li><a href="#faculity-member">Conheça</a></li>
           <li><a href="#contact">Contato</a></li>
-          <li class="btn-trial"><a href="#footer">Material gratuito</a></li>
+          <li class="btn-trial"><a href="#ebook">Material gratuito</a></li>
         </ul>
       </div>
     </div>
@@ -441,7 +441,7 @@
             <!-- Plan  -->
             <div class="pricing-head">
               <h4>Workshops</h4>
-              <span class="amount"><span class="peq">R$</span>332,00</span>
+              <span class="amount"><span class="peq">R$</span>332,80</span>
             </div>
 
             <!-- Plean Detail -->
@@ -570,7 +570,7 @@
 
   <!--Footer-->
   <section id="ebook">
-  <footer id="footer" class="footer">
+  <footer id="ebook" class="footer">
     <div class="container text-center">
 
       <div class="row">
@@ -578,8 +578,8 @@
         <div id="errormessageebook"></div>
       </div>
 
-      <h3>Solicite o Ebook gratuito <font color="#FFFFFF"><i>Desenhando Fórmulas de Química em LaTeX</i></font>. </h3>
-      </h2><span><p>Prometo não utilizar suas informações de contato para enviar qualquer tipo de SPAM.</p></span><p><span>Alguns serviços de e-mail podem direcionar o Ebook para o lixo eletrônico.</p></span></h2>
+      <h3>Solicite o Ebook gratuito<br> <font color="#FFFFFF"><i>Desenhando Fórmulas de Química em LaTeX</i></font>. </h3>
+      <h5><span><font color="#COCOCO"<p>Prometo não utilizar suas informações de contato para enviar qualquer tipo de SPAM.</p></span><p><span>Alguns serviços de e-mail podem direcionar o Ebook para o lixo eletrônico.</p></span></h5>
       <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" role="form" class="ebookForm">
         <input type="hidden" name="token_" value="123zxcfghopq">
         <div class="col-md-3 col-md-offset-2 col-sm-4">
