--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Atual.pro</title>
   <meta name="description" content="Cursos de qualidade para melhorar seus resultados">
-  <meta name="keywords" content="Latex, Overleaf, Chemfig, Excel, Google Planilhas, Libre Office Calc, Java, Ciencia de dados, Internet das Coisas">
+  <meta name="keywords" content="Simplificando as fórmulas de Química,Latex, Overleaf, Chemfig, Excel, Google Planilhas, Libre Office Calc, Java, Ciencia de dados, Internet das Coisas">
 
   <!-- animate -->
   <link rel="stylesheet" href="css/reset.min.css">
@@ -53,7 +53,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#feature">Conteúdo</a></li>
-          <li><a href="#work-shop">Workshops</a></li-->
+          <!--li><a href="#work-shop">Workshops</a></li-->
           <li><a href="#courses">Cursos</a></li>
           <li><a href="#faculity-member">Conheça</a></li>
           <li><a href="#contact">Contato</a></li>
@@ -244,7 +244,7 @@
   </section-->
   <!--/ Cta-->
   <!--work-shop-->
-  <section id="work-shop" class="section-padding">
+  <!--section id="work-shop" class="section-padding">
     <div class="container">
       <div class="row">
         <div class="header-section text-center">
@@ -252,7 +252,7 @@
           <p>Confira os próximos Workshops.</p>
           <hr class="bottom-line">
         </div>
-        <!--div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6">
           <div class="service-box text-center">
             <div class="icon-box">
               <i class="fas fa-file-alt color-green"></i>
@@ -261,7 +261,7 @@
               <h4 class="ser-text">Atual LaTeX Workshop</h4>
             </div>
           </div>
-        </div-->
+        </div>
         <div class="col-md-6 col-sm-12">
           <div class="service-box text-center">
             <div class="icon-box">
@@ -284,8 +284,7 @@
              Aguarde ...
           </div>
         </div>
-        <!--WEB  -->
-        <!--div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6">
           <div class="service-box text-center">
             <div class="icon-box">
               <i class="fa fa-code color-green"></i>
@@ -294,9 +293,8 @@
               <h4 class="ser-text">Atual Web Workshop</h4>
             </div>
              Aguarde ...
-          </div-->
+          </div>
         </div>
-        <!--WEB  -->
         <div class="header-section text-center">
         	<h2></h2>
           <p>Os Workshops são eventos presenciais com a máxima interação, onde os alunos podem se conhecer, interagir e receber informação de alta qualidade ao vivo. Neste tipo de evento os participantes recebem uma variedade de material pronto para uso e indicações de fontes onde encontrar mais recursos. Geralmente estes encontros tem duração de 4 horas com coffe break. Brindes sempre estão presentes em nossos workshops, aproveite :) .</p>
@@ -304,7 +302,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section-->
   <!--/ work-shop-->
   <!--Testimonial-->
   <!--section id="testimonial" class="section-padding">
@@ -401,7 +399,7 @@
   </section>
   <!--/ Courses-->
   <!--Pricing-->
-  <section id="pricing" class="section-padding">
+  <!--section id="pricing" class="section-padding">
     <div class="container">
       <div class="row">
         <div class="header-section text-center">
@@ -409,28 +407,23 @@
           <p>Confira<br></p>
           <hr class="bottom-line">
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-6 col-sm-6">
           <div class="price-table">
-            <!-- Plan  -->
             <div class="pricing-head">
               <h4>Ebook</h4><span class="amount">Grátis</span>
             </div>
 
-            <!-- Plean Detail -->
             <div class="price-in mart-15">
               <a href="#ebook" class="btn btn-bg green btn-block">Adquirir</a>
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-6 col-sm-6">
           <div class="price-table">
-            <!-- Plan  -->
             <div class="pricing-head">
               <h4>Cursos online</h4>
               <span class="amount"><span class="peq">R$</span>44,62</span>
             </div>
-
-            <!-- Plean Detail -->
             <div class="price-in mart-15">
               <a href="#" class="btn btn-bg yellow btn-block">Adquirir</a>
             </div>
@@ -438,13 +431,10 @@
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="price-table">
-            <!-- Plan  -->
             <div class="pricing-head">
               <h4>Workshops</h4>
               <span class="amount"><span class="peq">R$</span>332,80</span>
             </div>
-
-            <!-- Plean Detail -->
             <div class="price-in mart-15">
               <a href="#" class="btn btn-bg red btn-block">Adquirir</a>
             </div>
@@ -452,7 +442,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section-->
   <!--/ Pricing-->
   <!--Faculity member-->
   <section id="faculity-member" class="section-padding">
