--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
               <h3>Curso Atual Simplificando as fórmulas de Química</h3>
               <p>Neste curso vamos explorar o editor LaTeX, fazer sua instalação e criar as principais fórmulas de química, de um jeito simples.</p>
             </figcaption>
-            <a href="#"></a>
+            <a href="https://go.hotmart.com/A14374190N"></a>
           </figure>
         </div>
         <div class="col-md-4 col-sm-6 padleft-right">
@@ -373,27 +373,37 @@
           </figure>
         </div>
         </div>
-        <!--div class="row">
+        <div class="row">
         <div class="col-md-4 col-sm-6 padleft-right">
           <figure class="imghvr-fold-up">
-            <img src="./img/php_texto.jpg" class="img-responsive">
+            <img src="./img/mono_texto.png" class="img-responsive">
             <figcaption>
-              <h3>Curso Atual Desenvolvedor Web</h3>
-              <p>Neste curso vamos explorar PHP do básico ao Cake PHP 3, incluindo bancos de dados, tratamento de imagens, txt, csv, xls e xlsx.</p>
+              <h3>Plataforma para TCC Monografis</h3>
+              <p>O Monografis é uma plataforma para auxiliar a escrita do TCC, projeto TCC, artigo, dissertação e tese. O Monografis orienta a escrita dissertativo-argumentativo guiando o aluno de forma embasada, da forma que a banca espera. Exporta para o Word nas normas ABNT. Você recebe certificado de 30hs complementares.</p>
             </figcaption>
-            <a href="#"></a>
+            <a href="https://go.hotmart.com/L14937708Y"></a>
           </figure>
-        </div-->
-        <!--div class="col-md-4 col-sm-6 padleft-right">
+        </div>
+        <div class="col-md-4 col-sm-6 padleft-right">
           <figure class="imghvr-fold-up">
-            <img src="img/course03.jpg" class="img-responsive">
+            <img src="img/cake_texto.png" class="img-responsive">
             <figcaption>
-              <h3>Curso Atual CakePHP 3</h3>
-              <p>Neste curso vamos criar um modelo de dados, um site e um sistema de gerenciamento do site.</p>
+              <h3>Curso de CakePHP 3</h3>
+              <p>O curso de CakePHP apresenta como usar o framework do zero de forma fácil, prática para impulsionar de vez sua carreira de desenvolvedor web. Já fiz este curso e me ajudou demais. Recomendo! </p>
             </figcaption>
-            <a href="#"></a>
+            <a href="https://go.hotmart.com/P14910108U"></a>
           </figure>
-        </div-->
+        </div>
+        <div class="col-md-4 col-sm-6 padleft-right">
+          <figure class="imghvr-fold-up">
+            <img src="img/javaee_texto.png" class="img-responsive">
+            <figcaption>
+              <h3>Formação completa em Java Web</h3>
+              <p>Formação completa com mais de 989 vídeos aulas. Curso destinado a programadores de sistemas em Java iniciantes ou que desejam se especializar. Olhei o material e considero que é um investimento excelente! </p>
+            </figcaption>
+            <a href="https://go.hotmart.com/R14943244W"></a>
+          </figure>
+        </div>
       </div>
     </div>
   </section>
@@ -567,9 +577,9 @@
         <div id="sendmessageebook"></div>
         <div id="errormessageebook"></div>
       </div>
-
-      <h3>Solicite o Ebook gratuito<br> <font color="#FFFFFF"><i>Desenhando Fórmulas de Química em LaTeX</i></font>. </h3>
-      <h5><span><font color="#COCOCO"<p>Prometo não utilizar suas informações de contato para enviar qualquer tipo de SPAM.</p></span><p><span>Alguns serviços de e-mail podem direcionar o Ebook para o lixo eletrônico.</p></span></h5>
+		<br><br><br><br>
+      <h1>Solicite o Ebook gratuito</h1><br> <h3><font color="#FFFFFF"><i>Desenhando Fórmulas de Química em LaTeX</i></font>. </h3>
+      <h5><span><font color="#COCOCO"></span><p><span>Alguns serviços de e-mail podem direcionar o Ebook para o lixo eletrônico.</p></span></h5>
       <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarebook.php" name="ebook" method="post" role="form" class="ebookForm">
         <input type="hidden" name="token_" value="123zxcfghopq">
         <div class="col-md-3 col-md-offset-2 col-sm-4">
