--- a/paula/contacts.html
+++ b/paula/contacts.html
@@ -71,19 +71,19 @@
         <form action="https://vps9431.publiccloud.com.br/atual/fale/enviarpaula.php" method="post" role="form" class="contactForm">
           <input type="hidden" name="token_" value="123zxcfghvw">
           <div class="form-group">
-            <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor digite pelo menos 4 letras no Nome" />
+            <input type="text" name="nome_" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Por favor digite pelo menos 4 letras no Nome" />
             <div class="validation"></div>
           </div>
           <div class="form-group">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Seu E-mail" data-rule="email" data-msg="Por favor digite um e-mail válido" />
+            <input type="email" class="form-control" name="email_" id="email" placeholder="Seu E-mail" data-rule="email" data-msg="Por favor digite um e-mail válido" />
             <div class="validation"></div>
           </div>
-          <div class="form-group">
+          <!--div class="form-group">
             <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Por favor digite pelo menos 8 letras no Assunto" />
             <div class="validation"></div>
-          </div>
+          </div-->
           <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor escreva algo para mim" placeholder="Mensagem"></textarea>
+            <textarea class="form-control" name="corpo_" rows="5" data-rule="required" data-msg="Por favor escreva algo para mim" placeholder="Mensagem"></textarea>
             <div class="validation"></div>
           </div>
           <button type="submit" class="btn btn-default">Enviar</button>
