--- a/paula/index.html
+++ b/paula/index.html
@@ -47,7 +47,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="recent">
+      <div class="recent center">
         <button class="btn-primarys"><h3>Livros que vão ajudar você mudar de vida.</h3></button>
         <hr>
       </div>
@@ -60,15 +60,12 @@
         <div class="col-md-4">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
             <div class="align-center">
-              <h4>Fully responsive</h4>
-              <div class="icon">
-                <i class="fa fa-desktop fa-3x"></i>
-              </div>
+              <h4>Você pode curar sua vida</h4>
               <p>
-                Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
+                Loiuse L. Hay
               </p>
               <div class="ficon">
-                <a href="" alt="">Learn more</a> <i class="fa fa-long-arrow-right"></i>
+               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8576848430&asins=8576848430&linkId=88fc4b54bd6b0e9fba66ce90db8fdb47&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe>
               </div>
             </div>
           </div>
@@ -76,16 +73,12 @@
         <div class="col-md-4">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.8s">
             <div class="align-center">
-              <h4>Modern Design</h4>
-              <div class="icon">
-                <i class="fa fa-cloud fa-3x"></i>
-
-              </div>
+              <h4>Gestão da emoção: Técnicas de coaching emocional para gerenciar a ansiedade</h4>
               <p>
-                Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
+                Augusto Cury.
               </p>
               <div class="ficon">
-                <a href="" alt="">Learn more</a> <i class="fa fa-long-arrow-right"></i>
+                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8582402600&asins=8582402600&linkId=35da59891dd397d2acbf78fe0519b360&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe>
               </div>
             </div>
           </div>
@@ -93,17 +86,12 @@
         <div class="col-md-4">
           <div class="wow flipInY" data-wow-offset="0" data-wow-delay="1.2s">
             <div class="align-center">
-              <h4>Hight Quality</h4>
-              <div class="icon">
-                <i class="fa fa-location-arrow fa-3x"></i>
-
-              </div>
+              <h4>Os Sete Mestres. Suas Origens e Criações</h4>
               <p>
-                Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
+                Maria Silvia P. Orlovas
               </p>
               <div class="ficon">
-                <a href="" alt="">Learn more</a> <i class="fa fa-long-arrow-right"></i>
-              </div>
+               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8537002526&asins=8537002526&linkId=8a2715fe2f5cd3ec8836ed3ed8a3bae1&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe>             </div>
             </div>
           </div>
         </div>
@@ -112,7 +100,7 @@
   </div>
 
 
-  <div class="container">
+  <!--div class="container">
     <div class="row">
       <div class="box">
 
@@ -152,7 +140,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div-->
 
 
   
