--- a/paula/index.html
+++ b/paula/index.html
@@ -75,7 +75,7 @@
             <div class="align-center">
               <h4>Gestão da emoção: Técnicas de coaching emocional para gerenciar a ansiedade</h4>
               <p>
-                Augusto Cury.
+                Augusto Cury
               </p>
               <div class="ficon">
                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=marcelot-20&marketplace=amazon&region=BR&placement=8582402600&asins=8582402600&linkId=35da59891dd397d2acbf78fe0519b360&show_border=true&link_opens_in_new_window=true&price_color=333333&title_color=0018a3&bg_color=ffffff"></iframe>
