--- a/paula/index.html
+++ b/paula/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Arsha Bootstrap Template</title>
+  <title>Ana Paula Medeiros</title>
+  <meta name="description" content="Dicas para melhorar sua vida">
+  <meta name="keywords" content="Auto ajuda, motivação pessoal, cursos do mestres, dicas para auto estima, como superar medos, como viver melhor, como melhorar a vida, como ter sucesso na vida, como superar medos, como prosperar, sete raios, mestres ascensionados.">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
