--- a/empresas/index.html
+++ b/empresas/index.html
@@ -400,7 +400,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title">Quero este livro</h3>
+            <h3 class="cta-title">Quero o livro Empresas feitas para vencer.</h3>
             <p class="cta-text">Conheça as técnicas do professor e consultor Jim Collins, considerado uma das mentes contemporâneas mais brilhantes na área de gestão empresarial.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
