--- a/empresas/index.html
+++ b/empresas/index.html
@@ -122,6 +122,10 @@
             Nascido em 1958, o norte-americano James C. Collins graduou-se em Matemática na Escola de Negócios de Stanford em 1983.<br>
             Em Stanford, também faz MBA e recebeu o prêmio Distingued Teacher, em 1992.
           </p>
+          Veja mais:<br>
+          <a href="https://www.blbbrasil.com.br/blog/jim-collins/" target="blank">Jim Collins: 5 lições do guru da AMBEV</a><br>
+          <a href="https://penser.com.br/jim-collins/" target="blank">Jim Collins: minibiografia, 20 frases e lições para se inspirar</a>
+        <br><br>
         </div>
 
         <div class="row">
@@ -377,8 +381,6 @@
             </div>
           </div>
 
-
-          
            <div class="col-lg-4 col-md-6">
             <div class="box featured fadeInLeft">
               <h3>Empresas feitas para vencer:</h3>
