--- a/index.html
+++ b/index.html
@@ -675,6 +675,21 @@
     </div>
   </section>
   <!--/ Faculity member-->
+  
+   <!--Contact-->
+  <section id="contact" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="header-section text-center">
+          <h2>Quer editar suas fórmulas de química de um jeito simples?</h2>
+  			<iframe width="560" height="315" src="https://www.youtube.com/embed/wu1NWt1cS70" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  	    </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Contact-->
+  
+  
   <!--Contact-->
   <section id="contact" class="section-padding">
     <div class="container">
@@ -765,7 +780,7 @@
       	<li><a href="https://github.com/Macelot/" class="icoGit"><i class="fab fa-github fa-fw"></i></a></li>
       	<li><a href="https://stackoverflow.com/users/3722369/user3722369" class="icoStack"><i class="fab fa-stack-overflow fa-fw"></i></i></a></li>
         <li><a href="https://medium.com/@marcelotelles_18526" class="icoMedium" class="icoMedium"><i class="fab fa-medium fa-fw"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/marcelo-telles-332b5661/" class="icoLinkedin"><i class="fab fa-linkedin fa-fw"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/marcelojtelles" class="icoLinkedin"><i class="fab fa-linkedin fa-fw"></i></a></li>
         <li><a href="https://www.youtube.com/user/marcelojtelles?feature=watch" class="icoYouTube"><i class="fab fa-youtube fa-fw"></i></a></li>	
         <li><a href="https://www.facebook.com/profile.php?id=100002941765270&ref=tn_tnmn" class="icoFacebook" ><i class="fab fa-facebook fa-fw"></i></a></li>
        	<li><a href="https://br.pinterest.com/marcelotelles14/" class="icoPinterest"><i class="fab fa-pinterest fa-fw"></i></a></li>
